@@ -4,6 +4,7 @@ Version 1.7.11+svn:
      Shavian
  * Multiplayer:
    * Non-human null controllers are no longer set to ai
+   * Don't allow a 0-sides game to be started (Debian bug #563310)
  * User interface:
    * Switched back to the tiled background for gui2
  * Miscellaneous and bugfixes:
